--- a/opencda/scenario_testing/config_yaml/ms_van3t_example.yaml
+++ b/opencda/scenario_testing/config_yaml/ms_van3t_example.yaml
@@ -4,80 +4,16 @@ carla_traffic_manager:
   ignore_lights_percentage: 0
   vehicle_list:
   - spawn_position:
-    - 125.0926
-    - 149.51
+    - 131.032
+    - 139.51
     - 0.3
     - 0
     - 0
     - 0
     vehicle_speed_perc: -200
   - spawn_position:
-    - 121.2634
-    - 136.51
-    - 0.3
-    - 0
-    - 0
-    - 0
-    vehicle_speed_perc: -200
-  - spawn_position:
-    - 100.4697
-    - 146.51
-    - 0.3
-    - 0
-    - 0
-    - 0
-    vehicle_speed_perc: -200
-  - spawn_position:
-    - 68.4432
+    - 121.5344
     - 143.51
-    - 0.3
-    - 0
-    - 0
-    - 0
-    vehicle_speed_perc: -200
-  - spawn_position:
-    - 88.5994
-    - 146.51
-    - 0.3
-    - 0
-    - 0
-    - 0
-    vehicle_speed_perc: -200
-  - spawn_position:
-    - 60.8507
-    - 149.51
-    - 0.3
-    - 0
-    - 0
-    - 0
-    vehicle_speed_perc: -200
-  - spawn_position:
-    - 79.2864
-    - 149.51
-    - 0.3
-    - 0
-    - 0
-    - 0
-    vehicle_speed_perc: -200
-  - spawn_position:
-    - 55.8898
-    - 143.51
-    - 0.3
-    - 0
-    - 0
-    - 0
-    vehicle_speed_perc: -200
-  - spawn_position:
-    - 136.2686
-    - 149.51
-    - 0.3
-    - 0
-    - 0
-    - 0
-    vehicle_speed_perc: -200
-  - spawn_position:
-    - 155.4882
-    - 146.51
     - 0.3
     - 0
     - 0
@@ -89,7 +25,7 @@ vehicle_base:
     perception:
       activate: false # when not activated, objects positions will be retrieved from server directly
       camera:
-        visualize: 1 # how many camera images need to be visualized. 0 means no visualization for camera
+        visualize: 0 # how many camera images need to be visualized. 0 means no visualization for camera
         num: 4 # how many cameras are mounted on the vehicle. Maximum 3(frontal, left and right cameras)
         # relative positions (x,y,z,yaw) of the camera. len(positions) should be equal to camera num
         positions:
@@ -113,23 +49,27 @@ vehicle_base:
     visualize: false
     activate: false
   behavior: &base_behavior
-    max_speed: 80 # maximum speed, km/h
+    max_speed: 70 # maximum speed, km/h
     tailgate_speed: 80 # when a vehicles needs to be close to another vehicle asap
-    overtake_allowed: false # whether overtake allowed, typically false for platoon leader
-    collision_time_ahead: 0.1 # used for collision checking
+    overtake_allowed: true # whether overtake allowed, typically false for platoon leader
+    collision_time_ahead: 1.1 # used for collision checking
 
 platoon_base:
   max_capacity: 10
-  inter_gap: 0.6 # desired time gap
-  open_gap: 1.2 # open gap
+  inter_gap: 0.2 # desired time gap
+  open_gap: 1.0 # open gap
   warm_up_speed: 30 # required speed before cooperative merging
 
 
 scenario:
+  town:
+    name: Town06
+  background_traffic:
+    vehicle_num: 20
   single_cav_list: # this is for merging vehicle or single cav without v2x
     - name: cav1
       spawn_position: [121.7194, 139.51, 0.3, 0, 0, 0]
-      destination: [606.87, 143.39, 0]
+      destination: [606.87, 145.39, 0]
       sensing:
         perception:
           activate: false
@@ -146,12 +86,10 @@ scenario:
             visualize: true
       v2x:
         communication_range: 35
-        platoon_init_pos: 1
-        pldm: true
-        intruder: false
+        ms-van3t: true # whether to use ms-van3t for communication
       behavior:
         <<: *base_behavior
-        max_speed: 80 # maximum speed, km/h
+        max_speed: 70 # maximum speed, km/h
         tailgate_speed: 111
         overtake_allowed: false
         local_planner:
@@ -159,8 +97,8 @@ scenario:
           debug: false
 
     - name: cav2
-      spawn_position: [111.7194, 139.51, 0.3, 0, 0, 0]
-      destination: [606.87, 143.39, 0]
+      spawn_position: [111.7194, 143.51, 0.3, 0, 0, 0]
+      destination: [606.87, 145.39, 0]
       sensing:
         perception:
           activate: false
@@ -177,9 +115,7 @@ scenario:
             visualize: true
       v2x:
         communication_range: 35
-        platoon_init_pos: 2
-        pldm: true
-        intruder: false
+        ms-van3t: true
       behavior:
         <<: *base_behavior
         max_speed: 100 # maximum speed, km/h
@@ -191,7 +127,7 @@ scenario:
 
     - name: cav3
       spawn_position: [101.7194, 139.51, 0.3, 0, 0, 0]
-      destination: [606.87, 143.39, 0]
+      destination: [606.87, 145.39, 0]
       sensing:
         perception:
           activate: false
@@ -208,9 +144,7 @@ scenario:
             visualize: true
       v2x:
         communication_range: 35
-        platoon_init_pos: 3
-        pldm: true
-        intruder: false
+        ms-van3t: true
       behavior:
         <<: *base_behavior
         max_speed: 100 # maximum speed, km/h
@@ -221,8 +155,8 @@ scenario:
           debug: false
 
     - name: cav4
-      spawn_position: [91.7194, 139.51, 0.3, 0, 0, 0]
-      destination: [606.87, 143.39, 0]
+      spawn_position: [91.7194, 146.51, 0.3, 0, 0, 0]
+      destination: [606.87, 145.39, 0]
       sensing:
         perception:
           activate: false
@@ -239,40 +173,7 @@ scenario:
             visualize: true
       v2x:
         communication_range: 35
-        platoon_init_pos: 0
-        pldm: true
-        intruder: false
-      behavior:
-        <<: *base_behavior
-        max_speed: 100 # maximum speed, km/h
-        tailgate_speed: 111
-        overtake_allowed: true
-        local_planner:
-          debug_trajectory: true
-          debug: false
-
-    - name: cav5
-      spawn_position: [91.7194, 143.51, 0.3, 0, 0, 0]
-      destination: [606.87, 143.39, 0]
-      sensing:
-        perception:
-          activate: false
-          camera:
-            visualize: 0 # how many camera images need to be visualized. 0 means no visualization for camera
-            num: 4 # how many cameras are mounted on the vehicle. Maximum 3(frontal, left and right cameras)
-            # relative positions (x,y,z,yaw) of the camera. len(positions) should be equal to camera num
-            positions:
-              - [2.5, 0, 1.0, 0]
-              - [0.0, 0.3, 1.8, 100]
-              - [0.0, -0.3, 1.8, -100]
-              - [-2.0, 0.0, 1.5, 180]
-          lidar: # lidar sensor configuration, check CARLA sensor reference for more details
-            visualize: true
-      v2x:
-        communication_range: 35
-        platoon_init_pos: 0
-        pldm: false
-        intruder: true
+        ms-van3t: true
       behavior:
         <<: *base_behavior
         max_speed: 100 # maximum speed, km/h
