--- a/environment.yml
+++ b/environment.yml
@@ -1,42 +1,27 @@
-name: opencda
+name: msvan3t_carla
 channels:
-  - defaults
-  - conda-forge
   - defaults
 dependencies:
   - pip==21.1.2
   - python==3.7.10
-  - cudatoolkit=11.1.1
-  - pytorch=1.8.0=py3.7_cuda11.1_cudnn8.0.5_0
-  - torchaudio=0.8.0=py37
-  - torchvision=0.9.0=py37_cu111
   - pip:
     - matplotlib==3.4.2
-    - gitpython>=3.1.30
     - networkx==2.5.1
     - numpy
     - pillow
-    - psutil
-    - pyyaml>=5.3.1
     - pyparsing==2.4.7
-    - requests>=2.23.0
     - six==1.16.0
     - open3d
     - opencv-python==4.5.2.52
     - pandas
     - pygame
     - scikit-learn==0.24.2
-    - thop>=0.1.1
-    - tqdm>=4.64.0
     - scipy==1.6.3
     - seaborn
     - lxml
     - shapely==1.8.4
     - omegaconf
     - sklearn
-    - setuptools>=65.5.1
+    - carla==0.9.12
     - zmq
     - pyzmq
-    - carla==0.9.12
-    - torch>=1.8.0
-    - torchvision>=0.9.0
